<?xml version="1.0"?>
<package format="2">
  <name>crasher</name>
  <version>0.0.0</version>
  <description>A subscriber node that randomly crashes</description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/imu_vn_100</url> -->
  <author email="clalancette@openrobotics.org">Chris Lalancette</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
